[gd_scene load_steps=27 format=3 uid="uid://865qsjevi4ht"]

[ext_resource type="Script" path="res://BombExplode.gd" id="1_3xt4d"]
[ext_resource type="Texture2D" uid="uid://n50xvklor3ae" path="res://assets/particlesIfNeeded/light_01.png" id="2_eo8wa"]
[ext_resource type="Texture2D" uid="uid://evqsbc3hltqk" path="res://assets/cursor (16).png" id="2_m2dkq"]

[sub_resource type="Gradient" id="Gradient_dl7k1"]
offsets = PackedFloat32Array(0, 0.846667, 1)
colors = PackedColorArray(0, 8.02745, 0, 1, 0.00392157, 0.113725, 0, 0.392157, 0.00392157, 0.113725, 0, 0.392157)

[sub_resource type="Curve" id="Curve_xklou"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.753333, 0.626374), 0.0, 0.0, 0, 0, Vector2(0.953333, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ynopo"]
curve = SubResource("Curve_xklou")

[sub_resource type="Gradient" id="Gradient_6qpya"]
offsets = PackedFloat32Array(0, 0.245902, 0.459016, 0.713115)
colors = PackedColorArray(0, 1, 1, 1, 0.427493, 0.427493, 0.427493, 1, 0, 1, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1osob"]
gradient = SubResource("Gradient_6qpya")

[sub_resource type="Curve" id="Curve_pj5wm"]
min_value = -100.0
_data = [Vector2(0, -100), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_oprqj"]
curve = SubResource("Curve_pj5wm")

[sub_resource type="Curve" id="Curve_l2tfk"]
_data = [Vector2(0, 0.362637), 0.0, 0.0, 0, 0, Vector2(0.933333, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_3sj3g"]
curve = SubResource("Curve_l2tfk")

[sub_resource type="Curve" id="Curve_q8wme"]
_data = [Vector2(0, 0.021978), 0.0, 0.0, 0, 0, Vector2(0.981481, 0.989011), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_crvwf"]
curve = SubResource("Curve_q8wme")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_x6rjj"]
lifetime_randomness = 0.1
particle_flag_disable_z = true
emission_shape_offset = Vector3(-5, 0, 0)
emission_shape = 3
emission_box_extents = Vector3(1, 10, 1)
spread = 0.0
initial_velocity_max = 415.73
radial_accel_min = 1.0
radial_accel_max = 1.0
radial_accel_curve = SubResource("CurveTexture_oprqj")
scale_min = 0.2
scale_max = 0.3
scale_curve = SubResource("CurveTexture_3sj3g")
color_ramp = SubResource("GradientTexture1D_1osob")
alpha_curve = SubResource("CurveTexture_ynopo")
turbulence_noise_speed_random = 4.0
turbulence_initial_displacement_max = 100.0
turbulence_influence_over_life = SubResource("CurveTexture_crvwf")

[sub_resource type="Curve" id="Curve_2257a"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.753333, 0.626374), 0.0, 0.0, 0, 0, Vector2(0.953333, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_1yffy"]
curve = SubResource("Curve_2257a")

[sub_resource type="Gradient" id="Gradient_wyu2q"]
offsets = PackedFloat32Array(0, 0.245902, 0.459016, 0.713115)
colors = PackedColorArray(0, 1, 1, 1, 0.427493, 0.427493, 0.427493, 1, 0, 1, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_r6afw"]
gradient = SubResource("Gradient_wyu2q")

[sub_resource type="Curve" id="Curve_7sc8i"]
min_value = -100.0
_data = [Vector2(0, -100), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_aeqnq"]
curve = SubResource("Curve_7sc8i")

[sub_resource type="Curve" id="Curve_b7tm5"]
_data = [Vector2(0, 0.791209), 0.0, 0.0, 0, 0, Vector2(0.933333, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qx5wh"]
curve = SubResource("Curve_b7tm5")

[sub_resource type="Curve" id="Curve_73hpa"]
_data = [Vector2(0, 0.021978), 0.0, 0.0, 0, 0, Vector2(0.981481, 0.989011), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_yufub"]
curve = SubResource("Curve_73hpa")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_57ki7"]
lifetime_randomness = 0.1
particle_flag_disable_z = true
emission_shape_offset = Vector3(-5, 0, 0)
emission_shape = 3
emission_box_extents = Vector3(1, 10, 1)
spread = 0.0
initial_velocity_max = 415.73
radial_accel_min = 1.0
radial_accel_max = 1.0
radial_accel_curve = SubResource("CurveTexture_aeqnq")
scale_min = 0.2
scale_max = 0.3
scale_curve = SubResource("CurveTexture_qx5wh")
color_ramp = SubResource("GradientTexture1D_r6afw")
alpha_curve = SubResource("CurveTexture_1yffy")
turbulence_noise_speed_random = 4.0
turbulence_initial_displacement_max = 100.0
turbulence_influence_over_life = SubResource("CurveTexture_yufub")

[node name="BombExplode" type="RayCast2D"]
top_level = true
exclude_parent = false
target_position = Vector2(500, 0)
collide_with_areas = true
script = ExtResource("1_3xt4d")

[node name="Line2D" type="Line2D" parent="."]
top_level = true
points = PackedVector2Array(0, 0, 100, 0)
width = 20.0
default_color = Color(0, 5, 0.501961, 1)
gradient = SubResource("Gradient_dl7k1")

[node name="CastingParticles" type="GPUParticles2D" parent="."]
top_level = true
emitting = false
amount = 55
process_material = SubResource("ParticleProcessMaterial_x6rjj")
texture = ExtResource("2_eo8wa")
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2(0, -100, 200, 200)

[node name="CollisionParticles" type="GPUParticles2D" parent="."]
top_level = true
emitting = false
amount = 80
process_material = SubResource("ParticleProcessMaterial_57ki7")
texture = ExtResource("2_m2dkq")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[node name="BeamParticles" type="GPUParticles2D" parent="."]
visible = false
top_level = true
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_57ki7")
texture = ExtResource("2_m2dkq")
lifetime = 2.0
explosiveness = 1.0
